crates/djls-python/tests/snapshots/corpus__repos__hyperkitty__hyperkitty__templatetags__hk_haystack.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "hyperkitty.templatetags.hk_haystack::filter::nolongterms":
    expects_arg: false
    arg_optional: false
block_specs: {}
